# nextcloud-deck

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml  publish.yml
deck/: api.py  models.py
test/: test_api.py
tests/: test_api.py
